Paginas bases del proyecto LUKY

--- a/resources/public/css/index.css
+++ b/resources/public/css/index.css
@@ -1,3 +1,48 @@
-h1 {
-    color: red;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    background-color: #3AA8AD; /* Cambio de color */
+    color: white;
+    padding: 1rem 0;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: right;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 1rem;
+}
+
+nav ul li a:hover {
+    background-color: #4CC3C8; /* Cambio de color al pasar el ratón */
+}
+
+main {
+    padding: 2rem;
+    text-align: center;
+}
+
+footer {
+    background-color: #3AA8AD; /* Cambio de color */
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
