--- a/resources/views/index.ejs
+++ b/resources/views/index.ejs
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    <link rel="stylesheet" href="css/index.css"> <!-- Forma en como se debe poner referencias para js y css -->
-    <script src="js/index.js"></script>
-    <!-- solo sigue la forma en como se llaman, js/nombre.js o css/nombre.css -->
+    <title>LUKY</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>Hola Mundo</h1>
-    <h4 id="title">Hola desde JS</h4>
-    <!-- Funcionando correctamente -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Iniciar Sesion</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Contacto</a></li>
+                
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h1>Bienvenido a LUKY</h1>
+            <p>¡Aquí puedes encontrar todo tipo de servicio!</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 LUKY. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
