--- a/resources/views/formulario.ejs
+++ b/resources/views/formulario.ejs
@@ -10,7 +10,7 @@
    
     <div class="container">
         <div class="container-form">
-            <form class="sign-in" action="/auth/login">
+            <form class="sign-in" action="/auth/login" method="post">
                 <h2>Iniciar Sesión</h2>
                 <div class="social-networks">
                     <ion-icon name="logo-google"></ion-icon>  
@@ -22,15 +22,15 @@
                 </div>
                 <div class="container-input">
                     <ion-icon name="lock-closed-outline"></ion-icon>
-                    <input type="password" id="password" name="password\" placeholder="Password">
+                    <input type="password" id="password" name="password" placeholder="Password">
                 </div>
                 <a href="#">¿Olvidaste tu contraseña?</a>
-                <button class="button">INICIAR SESIÓN</button>
+                <button type="submit" class="button">INICIAR SESIÓN</button>
             </form>
         </div>
 
         <div class="container-form">
-            <form class="sign-up" action="/auth/registro">
+            <form class="sign-up" action="/auth/registro" method="post">
                 <h2>Registrarse</h2>
                 <div class="social-networks">
                     <ion-icon name="logo-google"></ion-icon>
@@ -60,7 +60,7 @@
                     <input type="password" name="password" placeholder="Contraseña">
                 </div>
                 <a href="#">Terminos y condiciones</a>
-                <button class="button" >REGISTRARSE</button>
+                <button class="button" type="submit" >REGISTRARSE</button>
             </form>
         </div>
 
