--- a/resources/views/buqueda.ejs
+++ b/resources/views/buqueda.ejs
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Acerca de</a></li>
+                <li><a href="/Acerca">Acerca de</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="/Perfil">Mi Perfil</a></li>
             </ul>
