--- a/resources/views/formulario.ejs
+++ b/resources/views/formulario.ejs
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="css/formulario.css">
+    <link rel="stylesheet" href="/css/formulario.css">
+    <style>
+        .error {
+            color: red;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -17,12 +23,19 @@
                 <span>Use su correo y contraseña</span>
                 <div class="container-input">
                     <ion-icon name="mail-outline"></ion-icon>
-                    <input type="text" id="loginEmail" name="email" placeholder="Email">
+                    <input type="text" id="loginEmail" name="email" placeholder="Email" value="<%= email %>">
                 </div>
+                <% if (errorEmail_l) { %>
+                    <label class="error"><%= errorEmail_l %></label>
+                <% } %>
                 <div class="container-input">
                     <ion-icon name="lock-closed-outline"></ion-icon>
                     <input type="password" id="loginPassword" name="password" placeholder="Password">
+                    
                 </div>
+                <% if (errorPassword_l) { %>
+                    <label class="error"><%= errorPassword_l %></label>
+                <% } %>
                 <a href="#">¿Olvidaste tu contraseña?</a>
                 <button type="submit" class="button">INICIAR SESIÓN</button>
             </form>
