Ultimos cambios, y archivos agregados
Ya seria casi todo por parte del frontend

--- a/resources/views/formulario.ejs
+++ b/resources/views/formulario.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>LUKY</title>
     <link rel="stylesheet" href="/css/formulario.css">
     <style>
         .error {
@@ -70,7 +70,7 @@
                     <ion-icon name="lock-closed-outline"></ion-icon>
                     <input type="password" name="password" id="registerPassword" placeholder="Contraseña">
                 </div>
-                <a href="#">Términos y condiciones</a>
+                <a href="/Terminos">Términos y condiciones</a>
                 <button class="button" type="submit">REGISTRARSE</button>
             </form>
         </div>
