--- a/resources/public/css/busqueda.css
+++ b/resources/public/css/busqueda.css
@@ -29,31 +29,35 @@ nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    text-align: right;
+    display: flex;
+    justify-content: flex-end;
 }
 
 nav ul li {
-    display: inline;
+    margin: 0 15px;
 }
 
 nav ul li a {
     text-decoration: none;
     color: white;
-    padding: 1rem;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.3s;
 }
 
 nav ul li a:hover {
     background-color: #4CC3C8;
+    border-radius: 5px;
 }
 
 main {
     padding-top: 80px; /* Asegúrate de que el contenido no esté oculto detrás del navbar */
     padding-bottom: 60px; /* Asegúrate de que el contenido no esté oculto detrás del footer */
     box-sizing: border-box;
+    text-align: center;
 }
 
 footer {
-    background-color: #4CC3C8;
+    background-color: #3AA8AD;
     color: white;
     text-align: center;
     padding: 1rem 0;
@@ -68,7 +72,7 @@ footer {
     margin: 0 auto;
 }
 
-#search-form {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,11 +82,25 @@ footer {
 
 #search-input {
     padding: 10px;
-    width: 600px;
+    width: 300px;
+    border-radius: 5px 0 0 5px;
+    border: 1px solid #ccc;
+    border-right: none;
+    outline: none;
 }
 
 button {
-    padding: 10px 20px;
+    padding: 10px;
+    border: none;
+    background-color: #3AA8AD;
+    color: white;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    outline: none;
+}
+
+button:hover {
+    background-color: #4CC3C8;
 }
 
 /* Estilo del cuadro de publicaciones */
