--- a/resources/views/index.ejs
+++ b/resources/views/index.ejs
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUKY</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Asegúrate de incluir FontAwesome 6 CSS en tu proyecto -->
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -13,10 +12,10 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="/formulario">Iniciar Sesion</a></li>
-                <li><a href="#">Acerca de</a></li>
+                <li><a href="/formulario">Iniciar Sesión</a></li>
+                <li><a href="/Acerca">Acerca de</a></li>
                 <li><a href="/formulario">Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -28,7 +27,6 @@
             <div class="container">
                 <input type="text" placeholder="Buscar....">
                 <button><i class="fas fa-search"></i></button>
-                <!-- Utiliza la clase 'fas fa-search' para el icono de búsqueda -->
             </div>
         </section>
     </main>
