--- a/resources/views/perfil.ejs
+++ b/resources/views/perfil.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apock Web Design</title>
+    <title>LUKY</title>
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <style type="text/css">
@@ -294,7 +294,7 @@
     <script>
         async function fetchProfileData() {
             try {
-                const response = await fetch('/auth/perfil');
+                const response = await fetch('/auth/profile');
                 const data = await response.json();
 
                 document.getElementById('username').textContent = `${data.nombre} ${data.apellidoP} ${data.apellidoM}`;
