Squashed commit of the following:
commit f3d9c31bad2706baa9cb1ae4a5a6d999c602c229
Author: DILANESAU <dilan.palafox.12@gmail.com>
Date:   Fri Jul 19 15:46:51 2024 -0600

    Preparacion de Proteccion de rutas

    Se a corregido la proteccion de rutas

commit d5c78b0e543fddc2ce14044a5833ef1a2edd7e2a
Author: EpikGhost <utp0147318@alumno.utpuebla.edu.mx>
Date:   Fri Jul 19 12:48:01 2024 -0600

    Ultimos cambios, y archivos agregados

    Ya seria casi todo por parte del frontend

commit 4b4323a5f832d874acf1483ce6803745c107b158
Author: Juan David Parra Santizo <johnsonsantizo26042003@gmail.com>
Date:   Thu Jul 18 23:49:20 2024 -0600

    Modificaiones de Formulario - David

commit 0f1461ba8ca54d2ccba254fbc1102683883aac58
Author: Juan David Parra Santizo <johnsonsantizo26042003@gmail.com>
Date:   Thu Jul 18 23:48:56 2024 -0600

    rutas de vistas -  David

commit 7b24bcd7bcdfe9232bc7e5e690e83d950eef9bea
Author: Juan David Parra Santizo <johnsonsantizo26042003@gmail.com>
Date:   Thu Jul 18 23:36:27 2024 -0600

    Modificaiones de Busqueda - David

commit e8077689c5e6121c7ffcce197285084d7dfb18de
Author: Juan David Parra Santizo <johnsonsantizo26042003@gmail.com>
Date:   Thu Jul 18 23:32:46 2024 -0600

    detalles de Busqueda de servicios - David

commit b414dbade211736d73f6c7dc24ba93f4abbec38e
Author: Juan David Parra Santizo <johnsonsantizo26042003@gmail.com>
Date:   Thu Jul 18 23:32:12 2024 -0600

    Configuracion de servidor dos - David

commit 4bb5acff3382a87b3cc3846604b1a0cf7bf23e2b
Author: Juan David Parra Santizo <johnsonsantizo26042003@gmail.com>
Date:   Thu Jul 18 16:07:29 2024 -0600

    redireccionamientos

commit fff00631a3ddb9a7ba9a4203c82fbfdd19adc3c6
Author: DILANESAU <dilan.palafox.12@gmail.com>
Date:   Thu Jul 18 15:56:23 2024 -0600

    Procesamiento de Rutas

    Correcciones de repositorio

commit bbc87707c43d27f73c3f002eca9f0b264e1b6c5b
Author: EpikGhost <utp0147318@alumno.utpuebla.edu.mx>
Date:   Thu Jul 18 01:49:55 2024 -0600

    Cambio sutil


--- a/resources/public/css/index.css
+++ b/resources/public/css/index.css
@@ -1,3 +1,92 @@
-h1 {
-    color: red;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #d8f5f4;
+    box-sizing: border-box;
+}
+
+header {
+    background-color: #3AA8AD; 
+    color: white;
+    padding: 1rem 0;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.3s;
+}
+
+nav ul li a:hover {
+    background-color: #4CC3C8;
+    border-radius: 5px;
+}
+
+main {
+    padding: 2rem;
+    text-align: center;
+}
+
+main h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+main p {
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.container input {
+    padding: 10px;
+    width: 300px;
+    border-radius: 5px 0 0 5px;
+    border: 1px solid #ccc;
+    border-right: none;
+    outline: none;
+}
+
+.container button {
+    padding: 10px;
+    border: none;
+    background-color: #3AA8AD;
+    color: white;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    outline: none;
+}
+
+.container button:hover {
+    background-color: #4CC3C8;
+}
+
+footer {
+    background-color: #3AA8AD; 
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
