--- a/resources/views/perfil.ejs
+++ b/resources/views/perfil.ejs
@@ -63,6 +63,7 @@
                         <% }) %>
                             <% } %>
         </section>
+        <!--Seccion de modal del HTML-->
         <div id="modal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
